# applied-ai-rag-assistant

./: .gitignore  Dockerfile  README.md  ci.yml  docker-compose.yml  pyproject.toml  pytest.ini  str_chat_docs.py
.github/workflows/: aws.yml  python_test.yml
amazon_bedrock/: app.py  cloudwatch_logs_agent.cfg  docs_openS_stream.py  docs_to_openSearch.py  query_against_openSearch.py  requirements.txt  storage.py
conf/: config.ini
data/12factor/en/: processes.md
data/aws/waf/: The_6_Pillars_of_the_AWS_Well-Architected_Framework.md
data/sources/md/12factor/fr/: processes.md
rag_assistant/: Hello.py  chat_with_documents.py  feedback_database.db  streamlit_app.py
rag_assistant/data/chroma/: chroma.sqlite3
rag_assistant/data/chroma/7ef3d954-02fd-45c3-82c3-1655c431f896/: index_metadata.pickle
rag_assistant/data/chroma/a49b823a-6b46-473b-aaa1-47c84592a55b/: index_metadata.pickle
rag_assistant/data/llama_index/summary_index/: index_store.json
rag_assistant/legacy_ux/: 1_Chat_with_Docs.py  1_RAG_agent_with_LI.py
rag_assistant/pages/: 01_Chat_with_Docs.py  0_Chat_with_Docs.py  1_Chat_with_Docs.py  1_Chat_with_Docs_V2.py  1_Load_Document.py  1_RAG.py  1_RAG_agent_with_LC.py  1_RAG_agent_with_LI.py  2_Load_Document.py  2_RAG.py  3_RAG_Admin.py
rag_assistant/pages/tests/: test_Hello.py  test_chat_with_docs.py  test_chat_with_docs_conversation_history.py
rag_assistant/rag/: pyvenv.cfg
rag_assistant/shared/: constants.py  llm_facade.py  rag_prompts.py
rag_assistant/tests/: test_Hello.py  test_chat_with_docs_conversation_history.py  test_streamlit_app.py
rag_assistant/utils/: auth.py  config_loader.py  constants.py  utils_rag_li.py  utilsdoc.py  utilsfile.py  utilsllm.py  utilsrag.py  utilsrag_lc.py  utilsrag_li.py  utilsvision.py
terraform/aws/: data.tf  ecs.tf  efs.tf  iam.tf  input.tf  kms.tf  lb.tf  main.tf  opensearch.tf  outputs.tf  route53.tf  s3.tf  security_group.tf  variables.tf
tests/: conftest.py  view_tru_dashboard.py
tests/UX/: test_chat_with_docs_conversation_history.py
tests/rag/: conftest.py  test_rag_langchain_claude2.py  test_rag_langchain_claude3.py  test_rag_langchain_gpt.py  test_rag_langchain_mistrallarge.py  test_rag_llamaindex_claude2.py  test_rag_llamaindex_claude3.py  test_rag_llamaindex_gpt.py
tests/rag_bedrock/: conftest.py  eval_questions.txt  test_rag_langchain_claude2.py  test_rag_langchain_claude3.py  test_rag_langchain_mistrallarge.py  test_rag_llamaindex_claude2.py  test_rag_llamaindex_claude3.py
tests/utils/: conftest.py  test_utils_rag_li.py  test_utilsfile.py  test_utilsrag.py  test_utilsrag_lc.py  test_utilsrag_li.py
