[tool.poetry]
name = "applied-ai-rag-assistant"
version = "0.0.1"
description = "Advanced RAG assistant"
authors = ["Pierre Bittner <pierre.bittner@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "rag_assistant"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = {version = ">=0.1.13"}
openai = ">=1.6.1"
duckduckgo-search = ">4.0"
pypdf = ">=4.0.1,<5.0.0" # "^3.12.2"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1"
tabulate = "^0.9.0"
streamlit-feedback = "^0.1.3"
langchain-experimental = "^0.0.55"
streamlit = ">=1.26"
docarray = "^0.40.0"
hnswlib = "^0.8.0"
langchain-community = "^0.0.29"
langchain-openai = "^0.1.1"
numexpr = "^2.8.8"
langchainhub = "^0.1.14"
llama-index =  ">=0.10.20"
llama-index-llms-openai =  ">=0.1.12"
nltk = ">=3.8.1"
python-dotenv= ">=1.0.0"
chromadb  = ">=0.4.0"
PyPDF2 = ">=3.0.1"
faiss-cpu = ">=1.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
