[tool.poetry]
name = "applied-ai-rag-assistant"
version = "0.0.1"
description = "Advanced RAG assistant"
authors = ["Pierre Bittner <pierre.bittner@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "rag_assistant"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = {version = ">=0.1.13"}
openai = ">=1.6.1"
duckduckgo-search = ">4.0"
pypdf = ">=4.0.1,<5.0.0" # "^3.12.2"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1"
tabulate = "^0.9.0"
streamlit-feedback = "^0.1.3"
langchain-experimental = "^0.0.55"
streamlit = ">=1.26"
docarray = "^0.40.0"
langchain-community = "^0.0.31" # must have "^0.0.31"
langchain-openai = "^0.1.1"
numexpr = "^2.8.8"
langchainhub = "^0.1.14"
llama-index =  ">=0.10.20"
llama-index-llms-openai =  ">=0.1.12"
llama-index-readers-wikipedia = ">=0.1.3"
llama-index-vector-stores-chroma = ">=0.1.6"
llama-index-embeddings-huggingface = ">=0.1.6"
nltk = ">=3.8.1"
python-dotenv= ">=1.0.0"
# was working with 0.4.3
chromadb = "=0.4.22" # Must have "0.4.3"
PyPDF2 = ">=3.0.1"
faiss-cpu = ">=1.8.0"
wikipedia = ">=1.4.0"
pathlib = ">=1.0.1"
pytest = ">=8.1.1"
trulens_eval = ">=0.27.0"
mistralai = ">=0.1.8"
llama-index-llms-mistralai = ">=0.1.10"
llama-index-embeddings-mistralai = ">=0.1.4"
# hnswlib = "0.7.0" # Must have "0.7.0"
# chromadb  = "0.4.3" # Must have "0.4.3"
# pysqlite3-binary = "^0.5.2.post3"
langchain_mistralai = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
